changed colour and updated

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -34,7 +34,7 @@ primaryColor = "#cb785c"
 backgroundColor = "#fdfdf8"
 secondaryBackgroundColor = "#ecebe3"
 textColor = "#3d3a2a"
-linkColor = "#3d3a2a"
+linkColor = "#170e3fff"
 borderColor = "#d3d2ca"
 showWidgetBorder = true
 baseRadius = "0.75rem"
